# min-translate-terminal-tool

./: .clang-format  .gitignore  CMakeLists.txt  dictionary.txt  log.txt  q&k.md  readme.md
db/: inverted-index.txt
include/: utf8string.h
src/: config.h  dictionary.cpp  dictionary.h  log.cpp  log.h  main.cpp  search.cpp  search.h  trie_tree.cpp  trie_tree.h  utils.cpp  utils.h
tests/: BK-Tree.cpp  all_word_chaos.txt  ascii.cpp  csv_read.py  dictionary.json  edit_dis.cpp  invertedIndexTest.cpp  invertedIndexTest.py  main.cpp  merge_en_zh_into_json.1.py  merge_en_zh_into_json.py  merge_en_zh_into_json_mutil_thread.py  read_excel.py  regex-split-word.cpp  remove_null.py  system-word.txt  trie_tree.cpp
tests/manage-dict/: change_to_dict.py  check_double.py  extract_chinese_phrases.py  merge_en_zh_into_json.1.py  remove_null.py  sort_json.py  thulac-cut-zh-word.py
tests/utf8/: format-string.cpp  my_utf8.h  myu8.cpp  myu8.h  test_utf_cpp.cpp  u8txt.cpp
